# svtd-core

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/law_demo/: corpus.json  run_law_demo.py
demos/simple_rag_demo/: README.md  demo.py
docs/: API.md  ARCHITECTURE.md  VALUE_PROPOSITION.md
examples/: basic_usage.py  langchain_integration.py  llamaindex_integration.py  rag_pipeline.py
svtd/: __init__.py  correction.py  integration.py  trust_engine.py  trust_ledger.py
tests/: __init__.py  test_integration.py  test_ledger.py  test_trust_engine.py
