[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "svtd"
version = "0.1.0"
authors = [
  { name="The SVTD Authors", email="bryan@memorygate.io" },
]
description = "Surgical Vector Trust Decay: A trust layer for RAG"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # No mandatory dependencies for the core logic
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "requests>=2.28.0",
]

[project.urls]
"Homepage" = "https://memorygate.io"
"Source" = "https://github.com/bryann-memorygate/svtd-core"
"Bug Tracker" = "https://github.com/bryann-memorygate/svtd-core/issues"
